# FileRenamer

./: .gitignore  CMakeLists.txt  README.md
src/: Application.cpp  Application.h  ExplorerPathProvider.cpp  ExplorerPathProvider.h  RenamerService.cpp  RenamerService.h  ToolTip.cpp  ToolTip.h  Tooltil.cpp  Tooltil.h  UiRenderer.cpp  UiRenderer.h  UpdateService.cpp  UpdateService.h  main.cpp  resource.h  resource.rc
